package edu.hitsz.factory;

/**
 * @author LICONG
 */
public interface PropFunc {

    /**
     * 道具功能
     */
    void func();
}
